## Process this file with Automake to create Makefile.in

lib_LTLIBRARIES = libneurosim.la

libneurosim_la_SOURCES = \
  $(srcdir)/conngen/connection_generator.cpp \
  $(srcdir)/conngen/connection_generator.h

libneurosim_la_HEADERS = \
  conngen/connection_generator.h

libneurosim_ladir = $(includedir)/neurosim
