## Process this file with Automake to create Makefile.in

lib_LTLIBRARIES = libneurosim.la

libneurosim_la_SOURCES = \
  $(srcdir)/conngen/connection_generator.cpp \
  $(srcdir)/conngen/connection_generator.h \
  version.c version.h

libneurosim_la_HEADERS = \
  $(srcdir)/conngen/connection_generator.h \
  version.h

libneurosim_ladir = $(includedir)/neurosim
